@@ -3,6 +3,7 @@ package com.pas.app.DAO;
 import com.pas.app.model.client.Client;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ClientRepository extends RepositoryGeneric<Client> {
     public ClientRepository() {
@@ -10,11 +11,11 @@ public class ClientRepository extends RepositoryGeneric<Client> {
     }
 
     public Client getClient(String login) {
-        return super.getAll().stream().filter(c -> c.getLogin().equals(login)).findFirst().orElse(null);
+        return super.getAll().stream().filter(c -> c.getPersonalID().equals(login)).findFirst().orElse(null);
     }
 
     public List<Client> getWithCharsInLogin(String chars) {
-        return super.getAll().stream().filter(c -> c.getLogin().contains(chars)).toList();
+        return super.getAll().stream().filter(c -> c.getPersonalID().contains(chars)).collect(Collectors.toList());
     }
 
     public void activateClient(Client c) {
